--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@girder/components": "^2.2.8",
+    "@girder/components": "^2.2.9",
     "core-js": "^3.6.5",
+    "django-s3-file-field": "^0.0.17",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
