--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 staticfiles/
-.env
 
 # Created by https://www.gitignore.io/api/django
 # Edit at https://www.gitignore.io/?templates=django
@@ -94,6 +93,15 @@ target/
 
 # celery beat schedule file
 celerybeat-schedule
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
 # SageMath parsed files
 *.sage.py
