--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -33,6 +33,8 @@ services:
     env_file: ./dev/.env.docker-compose
     volumes:
       - .:/opt/django-project
+    ports:
+      - 3838:3838
     depends_on:
       - postgres
       - rabbitmq
