--- a/tox.ini
+++ b/tox.ini
@@ -82,6 +82,16 @@ ignore =
     W503,
     # Missing docstring in *
     D10,
+exclude =
+    .git,
+    __pycache__,
+    .tox,
+    .eggs,
+    *.egg,
+    venv,
+    env,
+    .venv,
+    .env,
 
 [pytest]
 DJANGO_SETTINGS_MODULE = optimal_transport_morphometry.settings
