--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
     django-stubs
     djangorestframework-stubs
 commands =
-    mypy {posargs:.}
+    mypy --install-types --non-interactive {posargs:.}
 
 [testenv:format]
 skipsdist = true
@@ -74,24 +74,22 @@ commands =
 max-line-length = 100
 show-source = True
 ignore =
-    # closing bracket does not match indentation of opening bracket’s line
-    E123
-    # whitespace before ':'
-    E203,
-    # line break before binary operator
-    W503,
-    # Missing docstring in *
-    D10,
+    D10,  # Missing docstring (errors D100 - D107)
+    E123, # Closing bracket does not match indentation of opening bracket's line
+    E203, # Whitespace before ':'
+    W503, # Line break occurred before a binary operator
 exclude =
     .git,
     __pycache__,
     .tox,
+    .mypy_cache,
     .eggs,
     *.egg,
     .env,
     .venv,
     env,
     venv,
+black-config = pyproject.toml
 
 [pytest]
 DJANGO_SETTINGS_MODULE = optimal_transport_morphometry.settings
