--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
       - ${DOCKER_RABBITMQ_PORT-5672}:5672
 
   minio:
-    image: minio/minio:latest
+    # image: minio/minio:latest
+    image: minio/minio:RELEASE.2022-01-28T02-28-16Z
     # When run with a TTY, minio prints credentials on startup
     tty: true
     command: ["server", "/data"]
