--- a/tox.ini
+++ b/tox.ini
@@ -78,6 +78,7 @@ ignore =
     E123, # Closing bracket does not match indentation of opening bracket's line
     E203, # Whitespace before ':'
     W503, # Line break occurred before a binary operator
+    N806, # variables should be lowercased
 exclude =
     .git,
     __pycache__,
