--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,16 @@ services:
     image: minio/minio:RELEASE.2022-01-28T02-28-16Z
     # When run with a TTY, minio prints credentials on startup
     tty: true
-    command: ["server", "/data"]
+    command:
+      [
+        "server",
+        "/data",
+        "--console-address",
+        ":${DOCKER_MINIO_CONSOLE_PORT-9001}"
+      ]
     environment:
       MINIO_ACCESS_KEY: minioAccessKey
       MINIO_SECRET_KEY: minioSecretKey
     ports:
       - ${DOCKER_MINIO_PORT-9000}:9000
+      - ${DOCKER_MINIO_CONSOLE_PORT-9001}:9001
