Fix failing flake8 config

--- a/tox.ini
+++ b/tox.ini
@@ -74,11 +74,16 @@ commands =
 max-line-length = 100
 show-source = True
 ignore =
-    D10,  # Missing docstring (errors D100 - D107)
-    E123, # Closing bracket does not match indentation of opening bracket's line
-    E203, # Whitespace before ':'
-    W503, # Line break occurred before a binary operator
-    N806, # variables should be lowercased
+    # Missing docstring (errors D100 - D107)
+    D10,
+    # Closing bracket does not match indentation of opening bracket's line
+    E123,
+    # Whitespace before ':'
+    E203,
+    # Line break occurred before a binary operator
+    W503,
+    # variables should be lowercased
+    N806,
 exclude =
     .git,
     __pycache__,
